--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,126 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.falling-tabs-container {
+  position: fixed; /* Makes it stick to the viewport */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden; /* So tabs that go outside the boundaries are hidden */
+  pointer-events: none; /* Ensures the container doesn't interfere with clicks */
+  z-index: 1900;
+}
+
+.falling-tab {
+  position: absolute;
+  animation: fallRotate linear infinite;
+}
+
+@keyframes fallRotate {
+  to {
+    transform: translateY(calc(100vh + 80px)) rotate(360deg);
+  }
+}
+
+.leave {
+  z-index: 100;
+  display: flex;
+  position: fixed;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+}
+
+.leave_01 {
+  color: #7fff4c;
+  background-color: #000;
+  border: 3px solid #5a7dff;
+  border-radius: 100px;
+  margin: 5px;
+  font-family: Impact, Haettenschweiler, Franklin Gothic Bold, Charcoal,
+    sans-serif;
+  position: absolute;
+  top: 0%;
+  bottom: auto;
+  left: 0%;
+  right: auto;
+}
+
+.leave_02 {
+  color: #f94cff;
+  background-color: #000;
+  border: 3px solid #5a7dff;
+  border-radius: 100px;
+  margin: 5px;
+  font-family: Impact, Haettenschweiler, Franklin Gothic Bold, Charcoal,
+    sans-serif;
+  display: none;
+  position: absolute;
+  top: 0%;
+  bottom: auto;
+  left: auto;
+  right: 0%;
+}
+
+.leave_03 {
+  color: #ffea4c;
+  background-color: #000;
+  border: 3px solid #5a7dff;
+  border-radius: 100px;
+  margin: 5px;
+  font-family: Impact, Haettenschweiler, Franklin Gothic Bold, Charcoal,
+    sans-serif;
+  display: none;
+  position: absolute;
+  top: auto;
+  bottom: 0%;
+  left: 0%;
+  right: auto;
+}
+
+.leave_04 {
+  color: #4cdeff;
+  background-color: #000;
+  border: 3px solid #5a7dff;
+  border-radius: 100px;
+  margin: 5px;
+  font-family: Impact, Haettenschweiler, Franklin Gothic Bold, Charcoal,
+    sans-serif;
+  display: none;
+  position: absolute;
+  top: auto;
+  bottom: 0%;
+  left: auto;
+  right: 0%;
+}
+
+.leave_01 {
+  width: 180px;
+  height: 70px;
+  justify-content: center;
+  align-items: center;
+  font-size: 22px;
+  line-height: 22px;
+  display: flex;
+}
+
+.leave_02,
+.leave_03,
+.leave_04 {
+  width: 180px;
+  height: 70px;
+  justify-content: center;
+  align-items: center;
+  font-size: 22px;
+  line-height: 22px;
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  .leave {
+    display: none;
+  }
+}
